I change and add some files in my program

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<title>Anand International School</title>
-  <link rel="icon" href="Rajkrishivsinh/First-Website/Door Logo_2.jpg">
+  <link rel="icon" href="https://raw.githubusercontent.com/Rajkrishivsinh/First-Website/79cf330676e945d8752c467932609288ca71a7ea/Door%20Logo_2.jpg">
 	<link rel="stylesheet" type="text/css" href="">
   <link rel="preconnect" href="https://fonts.gstatic.com">
 <link rel="preconnect" href="https://fonts.gstatic.com">
